--- a/JavaScript/Task3/task3.css
+++ b/JavaScript/Task3/task3.css
@@ -1,33 +1,41 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "Fira sans", sans-serif;
-  }
-  .contner {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  /* #operation{
-    display: flex;
-    flex-direction: row;
-
-    justify-content: center;
-    align-items: center;
-  } */
-
-  
-  .buttonHolder{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Fira sans", sans-serif;
+}
+.contner {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#operation{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
   }
-  .content{
-    height: 500px;
-    width: 500px;
+  button{
+    height: 100px;
+    width: 100px;
   }
+  #count{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+  }
+.buttonHolder {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.content {
+  height: 500px;
+  width: 500px;
+}
