--- a/HTML/Mihir portfolio/Css/about.css
+++ b/HTML/Mihir portfolio/Css/about.css
@@ -95,3 +95,8 @@
 .downloadResume:hover {
   background-position: 0 -100%;
 }
+
+.downloadResume a {
+  color: #131212;
+  text-decoration: none;
+}
