--- a/HTML/Mihir portfolio/Css/contact.css
+++ b/HTML/Mihir portfolio/Css/contact.css
@@ -57,6 +57,7 @@
   align-items: center;
   padding-left: 20px;
   grid-template-columns: 15% 80%;
+  cursor: pointer;
 }
 .iconTele {
   display: flex;
